package com.softwarearchitecture.user.service.factory;

public enum UserType {
    ADMIN,
    CLIENT
}
