@startuml

title __FACTORY's Class Diagram__\n

  namespace com.softwarearchitecture.user.service {
    namespace factory {
      class com.softwarearchitecture.user.service.factory.AdminUser {
          + createUser()
      }
    }
  }
  

  namespace com.softwarearchitecture.user.service {
    namespace factory {
      class com.softwarearchitecture.user.service.factory.ClientUser {
          + createUser()
      }
    }
  }
  

  namespace com.softwarearchitecture.user.service {
    namespace factory {
      class com.softwarearchitecture.user.service.factory.CreateUserFactory {
          + CreateUserFactory()
          + createUser()
      }
    }
  }
  

  namespace com.softwarearchitecture.user.service {
    namespace factory {
      interface com.softwarearchitecture.user.service.factory.ICreateUserFactory {
          {abstract} + createUser()
      }
    }
  }
  

  namespace com.softwarearchitecture.user.service {
    namespace factory {
      enum UserType {
        ADMIN
        CLIENT
      }
    }
  }
  

  com.softwarearchitecture.user.service.factory.AdminUser .up.|> com.softwarearchitecture.user.service.factory.ICreateUserFactory
  com.softwarearchitecture.user.service.factory.ClientUser .up.|> com.softwarearchitecture.user.service.factory.ICreateUserFactory
  com.softwarearchitecture.user.service.factory.ClientUser o-- com.softwarearchitecture.user.service.repository.RoleRepository : roleRepository
  com.softwarearchitecture.user.service.factory.ClientUser o-- com.softwarearchitecture.user.service.repository.UserRepository : userRepository
  com.softwarearchitecture.user.service.factory.CreateUserFactory o-- com.softwarearchitecture.user.service.repository.UserRepository : repository
  com.softwarearchitecture.user.service.factory.CreateUserFactory o-- com.softwarearchitecture.user.service.service.RoleServiceImpl : roleService
  com.softwarearchitecture.user.service.factory.CreateUserFactory o-- com.softwarearchitecture.user.service.entity.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
